fix navbar alignment in responsive

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -41,6 +41,15 @@ body{
     /* display: block; */
 }
 
+.nav-link-1{
+    color: rgba(255, 255, 255, 0.5) !important;
+    transition: 0.3s all ease-in-out;
+}
+
+.nav-link-1:hover{
+    color: #fff !important;
+}
+
 .nav-header {
     height: 50px;
     font-size: 20px;
@@ -75,10 +84,10 @@ body{
 }
 
 .nav-container {
-    width: 80% !important;
+    width: 52% !important;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
 }
 
 .pic2{
